--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "13.4.19",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "axios": "^1.5.0",
+    "js-cookie": "^3.0.5",
+    "moment": "^2.29.4",
+    "next": "12.1.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-toastify": "^9.1.3"
   },
   "devDependencies": {
     "eslint": "8.49.0",
